# libaditof

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  azure-pipelines.yml  catalog-info.yaml  package.xml
.github/workflows/: codeql.yml
ci/azure/: build_docker_image.sh  deps.sh  inside_docker.sh  lib.sh  run_build.sh  setup_docker.sh
ci/azure/imx8-docker/: Dockerfile
cmake/: aditof-config.cmake.in
dependencies/adi/command_parser/: command_parser.cpp  command_parser.h
doc/itof/: linux_build_instructions.md  nxp_build_instructions.md  windows_build_instructions.md
sdk/: CMakeLists.txt
sdk/common/adi/depth-compute-opensource/: CMakeLists.txt
sdk/common/adi/tofi/: tofi_util.c
sdk/include/aditof/: camera.h  camera_definitions.h  depth_sensor_interface.h  frame.h  status_definitions.h
sdk/src/: frame.cpp  frame_handler.cpp  system_impl.cpp  utils_ini.cpp
sdk/src/cameras/itof-camera/: camera_itof.cpp  camera_itof.h
sdk/src/cameras/itof-frame/: frame_handler_impl.cpp  frame_impl.cpp
sdk/src/connections/network/: network.cpp  network.h  network_depth_sensor.cpp  network_depth_sensor.h  network_sensor_enumerator.cpp
sdk/src/connections/offline/: offline_depth_sensor.cpp  offline_depth_sensor.h
sdk/src/connections/usb/: usb_depth_sensor.h
sdk/src/connections/usb/linux/: usb_depth_sensor_linux.cpp
sdk/src/connections/usb/macos/: usb_depth_sensor_macos.cpp
sdk/src/connections/usb/windows/: usb_depth_sensor_windows.cpp
