<?xml version="1.0"?>

<!-- This file is used to build libaditof as a ROS package -->
<package format="2">
  <name>libaditof</name>
  <version>1.0.0</version>
  <description>The ADI ToF SDK ROS package</description>
  <maintainer email="ros@analog.com">Analog Devices</maintainer>
  <url type="website">https://github.com/analogdevicesinc/libaditof</url>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>  
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

</package>
